# weather

./: dashboard.py  pyproject.toml  weather.py
api/: __init__.py  open_meteo.py  rainviewer.py
charts/: __init__.py  model_comparison.py
maps/: __init__.py  weather_maps.py
