[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "streamlit>=1.40.0",
    "folium>=0.18.0",
    "streamlit-folium>=0.23.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
]
